Fix CoAP Integration initalization